--- a/style.css
+++ b/style.css
@@ -279,13 +279,13 @@ header{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: fit-content;
-    height: 400px;
+    width: 30%;
+    height: 80%;
     background: linear-gradient(to right, black, rgba(56, 56, 56, 0.923));
     box-shadow: -5px 8px 15px #c1c1c142;
     color: #e6e6e6;
     padding: 20px;
-    gap: 10px;
+    gap: 20px;
     border-radius: 5px;
 }
 
@@ -301,11 +301,15 @@ header{
     display: flex;
     flex-direction: column;
     gap: 5px;
+    
 }
 
 .contact_input{
     height: 25px;
+    width: 50%;
     border: none;
+    background-color: transparent;
+    border-bottom: 2px solid #e6e6e6;
 }
 
 #contact_message{
@@ -412,6 +416,10 @@ header{
 
     .project_card_area{
         width: 80%;
+    }
+
+    .contact_container{
+
     }
 }
 
