--- a/landingPage_2.css
+++ b/landingPage_2.css
@@ -5,27 +5,34 @@
 }
 
 /*#region -- LANDING PAGE 1 -- */
-
+body{
+    background-color: lightgrey;
+}
 .container {
     display: flex;
     position: relative;
-    height: 100vh;
-    width: 100%;
+    height: 600px;
+    width: 80%;
     align-items: center;
     justify-content: center;
     background-image: url(images/coding_background.jpg);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
+    margin: 100px auto;
     z-index: 0;
+    border-radius: 15px;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.514);
 }
 
 .contrast_layer {
     position: absolute;
-    height: 100vh;
+    height: 600px;
     width: 100%;
+    margin: 100px auto;
     background-color: #0000006e;
     z-index: 1;
+    border-radius: 15px;
 }
 
 .content {
@@ -59,13 +66,13 @@
 .form_input {
     border: 1px solid rgb(93, 93, 93);
     border-radius: 5px;
-    padding: 5px;
+    padding: 10px 5px;
 }
 
 .form_submit {
     border: 1px solid rgb(93, 93, 93);
     border-radius: 10px;
-    padding: 5px 10px;
+    padding: 10px 10px;
     background-color: #28c490;
     transition: 0.3s;
 }
