--- a/project3/project3_style.css
+++ b/project3/project3_style.css
@@ -9,8 +9,11 @@ body{
 }
 
 .main_container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-image: linear-gradient(100deg, rgba(49, 235, 61, 0.601), rgba(9, 105, 15, 0.575));
-    width: 60%;
+    width: 80%;
     height: auto;
     margin: 100px auto;
     padding: 10px;
@@ -18,21 +21,16 @@ body{
 }
 
 .grid{
-    position: relative;
     display: grid;
-    width: 100%;
+    max-width: 100%;
     height: 600px;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, minmax(0, 1fr));
     grid-template-rows: repeat(3, 1fr);
-    justify-items: stretch;
-    align-items: stretch;
     gap: 15px;
 }
 
 .grid div{
-    width: 100%;
     border-radius: 15px;
-    
 }
 
 #welcome {
@@ -139,6 +137,9 @@ p{
 }
 
 @media (max-width:950px) {
+    .grid{
+        width: 100%;
+    }
     h2 {
         font-size: 20px;
     }
@@ -148,6 +149,18 @@ p{
 }
 
 @media (max-width:780px) {
+    #welcome{
+        grid-area: 1/1/3/4;
+    }
+    #image1{
+        grid-area: 3/1/4/2;
+    }
+    #image2 {
+        grid-area: 3/2/4/3;
+    }
+    #image3 {
+        grid-area: 3/3/4/4;
+    }
     h2 {
         font-size: 18px;
     }
