--- a/project3/project3_style.css
+++ b/project3/project3_style.css
@@ -4,25 +4,41 @@
     box-sizing: border-box;
 }
 
+a{
+    text-decoration: none;
+}
+
 body{
-    background-color: rgb(255, 255, 255);
+    background-image: linear-gradient(100deg, rgba(49, 235, 61, 0.601), rgba(9, 105, 15, 0.575));
+}
+
+.back_btn{
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: azure;
+    transition: 0.3s;
+}
+
+.back_btn:hover{
+    background-color: rgb(196, 210, 210);
 }
 
 .main_container{
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: linear-gradient(100deg, rgba(49, 235, 61, 0.601), rgba(9, 105, 15, 0.575));
-    width: 80%;
+    width: 70%;
     height: auto;
     margin: 100px auto;
     padding: 10px;
-    border-radius: 15px;
 }
 
 .grid{
     display: grid;
-    max-width: 100%;
+    width: 100%;
     height: 600px;
     grid-template-columns: repeat(3, minmax(0, 1fr));
     grid-template-rows: repeat(3, 1fr);
@@ -88,7 +104,7 @@ p{
     border: none;
     border-bottom: 2px solid black;
     padding: 5px;
-    width: 80%;
+    width: 200px;
 }
 
 #submit{
@@ -131,15 +147,15 @@ p{
 }
 
 @media (max-width:1200px){
+    .main_container{
+        width: 80%;
+    }
     h2{
         font-size: 25px;
     }
 }
 
 @media (max-width:950px) {
-    .grid{
-        width: 100%;
-    }
     h2 {
         font-size: 20px;
     }
@@ -149,6 +165,9 @@ p{
 }
 
 @media (max-width:780px) {
+    .main_container {
+        width: 90%;
+    }
     #welcome{
         grid-area: 1/1/3/4;
     }
