--- a/project2/project2_styles.css
+++ b/project2/project2_styles.css
@@ -4,10 +4,50 @@
     box-sizing: border-box;
 }
 
-/*#region -- LANDING PAGE 1 -- */
-body{
-    background-color: lightgrey;
+a{
+    text-decoration: none;
+    color: black;
 }
+/*#region -- LANDING PAGE 1 -- */
+#project2_body{
+    background-image: url(/images/coding_background.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+}
+
+.back_btn {
+    position: absolute;
+    top: 10px;
+    margin: 10px 0px 0px 10px;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: azure;
+    transition: 0.3s;
+    z-index: 5;
+}
+
+.back_btn:hover {
+    background-color: rgb(196, 210, 210);
+}
+
+.gray_bg{
+    display: flex;
+    justify-content: center;
+    background-color: lightgray;
+    padding: 50px;
+}
+
+.coding_bg{
+    background-image: url(/images/coding_background.jpg);
+    background-size: cover;
+    box-shadow: 0px 3px 20px rgba(0, 0, 0, 0.552);
+}
+
+.cntr_margin{
+    margin: 100px auto;
+}
+
 .container {
     display: flex;
     position: relative;
@@ -15,20 +55,24 @@ body{
     width: 80%;
     align-items: center;
     justify-content: center;
-    background-image: url(/images/coding_background.jpg);
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-    margin: 100px auto;
     z-index: 0;
     border-radius: 15px;
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.514);
+}
+
+.project_contrast_layer {
+    position: absolute;
+    height: 600px;
+    width: 100%;
+    margin: 100px auto;
+    background-color: #0000006e;
+    z-index: 1;
+    border-radius: 15px;
 }
 
 .contrast_layer {
     position: absolute;
-    height: 600px;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     margin: 100px auto;
     background-color: #0000006e;
     z-index: 1;
