--- a/style.css
+++ b/style.css
@@ -19,11 +19,12 @@ a{
     font-style: normal;
 }
 
-.button_styling{
-    background-color: #28c490;
+.btn_styling{
+    background-color: #1fb75f;
     padding: 10px 10px;
     border-radius: 8px;
 }
+
 /*#endregion*/
 
 
@@ -39,6 +40,7 @@ header{
     position: sticky;
     top: 0px;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.395);
+    z-index: 9;
 }
 
 .header_container{
@@ -47,6 +49,7 @@ header{
     justify-content: space-between;
     width: 70%;
     margin: auto;
+    
 }
 
 .nav ul{
@@ -90,7 +93,7 @@ header{
     display: flex;
     flex-direction: column;
     width: 60%;
-    gap: 10px;
+    gap: 20px;
     align-items: center;
     justify-content: center;
     margin: 20px 0px;
@@ -233,6 +236,13 @@ header{
     color: rgb(255, 255, 255);
 }
 
+.cardimg3{
+    background-image: url(images/tiger.jpg);
+    background-size: cover;
+    background-position: center center;
+    border-radius: 10px 10px 0px 0px;
+}
+
 .project_card_text {
     background: linear-gradient(to right, black, rgba(56, 56, 56, 0.923));
     display: flex;
@@ -241,7 +251,7 @@ header{
     justify-content: center;
     gap: 15px;
     border-top: 2px solid white;
-    height: 50%;
+    height: auto;
     width: 100%;
     color: rgb(207, 219, 232);
     text-align: center;
@@ -249,15 +259,7 @@ header{
     padding: 20px 20px;
     border-radius: 0px 0px 10px 10px;
     box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.573);
-    
 }
-
-.project_card_text > button {
-    font-size: 1rem;
-    width: 50%;
-    background-color: whitesmoke;
-}
-
 /*#endregion*/
 
 
@@ -280,11 +282,11 @@ header{
     width: 35%;
     height: 80%;
     background: linear-gradient(to right, black, rgba(56, 56, 56, 0.923));
-    box-shadow: -5px 8px 15px #c1c1c142;
     color: #e6e6e6;
     padding: 20px;
     gap: 20px;
-    border-radius: 5px;
+    border: 2px solid rgb(125, 125, 125);
+    border-radius: 10px;
 }
 
 .contact_form{
