--- a/project1_style.css
+++ b/project1_style.css
@@ -4,6 +4,8 @@
     box-sizing: border-box;
 }
 
+/*#region Project Page Styles  */
+
 #project1_section{
     background-color: lightgray;
     display: flex;
@@ -20,18 +22,6 @@
     margin: auto;
     border-radius: 15px;
     box-shadow: 0px 3px 20px black;
-}
-
-.project_sideimg{
-    height: 500px;
-    width: 60%;
-    border-radius: 15px;
-}
-
-.project_sideimg img{
-    height: 500px;
-    width: 100%;
-    border-radius: 15px 0px 0px 15px;
 }
 
 .project_login{
@@ -62,28 +52,46 @@
     align-items: flex-start;
 }
 
+.project_sideimg {
+    background-image: url(images/basketball.jpg);
+    background-size: cover;
+    background-position: bottom;
+    height: 500px;
+    width: 60%;
+    border-radius: 15px 0px 0px 15px;
+}
+
+.project_login h2 {
+    text-align: center;
+}
+
+/*#endregion*/
+
+/*#region Project Styles */
+body{
+    background-color: lightgray;
+}
+
 .login_container{
-    width: 100vw;
-    height: 100dvh;
+    width: 80vw;
+    height: 80dvh;
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.project_login h2{
-    text-align: center;   
+    margin: 50px auto;
+    box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.4);
+    border-radius: 15px;
 }
 
 .side_image {
-    height: 100vh;
-    width: 60%;
-    border-top: 5px solid rgb(160, 160, 160);
-    border-bottom: 5px solid rgb(160, 160, 160);
+    height: 80vh;
+    width: 60%;  
 }
 
 .side_image img {
     width: 100%;
     height: 100%;
+    border-radius: 15px 0px 0px 15px;
 }
 
 .login{
@@ -96,6 +104,7 @@
     justify-content: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     gap: 10px;
+    border-radius: 0px 15px 15px 0px;
 }
 
 .form{
@@ -115,7 +124,12 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
-    width: 60%;
+    width: 80%;
+}
+
+.login h2{
+    width: 80%;
+    text-align: center;
 }
 
 #submit{
@@ -135,6 +149,8 @@
 .help{
     font-size: 10px;
 }
+
+/*#endregion */
 
 @media (max-width:800px){
     .login_container, .project1_container{
@@ -158,6 +174,8 @@
 
     .side_image img, .project_sideimg img{
         border-radius: 15px 15px 0px 0px;
+        object-fit: cover;
+        object-position: bottom;
     }
 
     .login, .project_login{
@@ -167,7 +185,7 @@
     }
 
     .project_login h2{
-
+        width: 70%;
     }
 
     .login div{
