--- a/project4_styles.css
+++ b/project4_styles.css
@@ -1,3 +1,6 @@
+body{
+    background-color: rgb(232, 231, 231);
+}
 
 .carousel-inner {
     height: 600px;
@@ -27,3 +30,35 @@ form img{
     width: 5vw;
     height: 5vw;
 }
+
+@media (max-width:850px) {
+    .main_ctr{
+    height: 500px;   
+    }
+
+    .carousel-inner {
+    height: 500px;
+    }
+    
+    .carousel-item img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    form {
+        height: 500px;
+        width: 40%;
+    }
+
+    form img {
+        height: 80px;
+    }
+
+    .border{
+        height: 400px;
+    }
+
+
+
+    }
