--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ html{
 
 a{
     text-decoration: none;
+    color: #000000;
 }
 
 .vast-shadow-regular {
@@ -20,9 +21,27 @@ a{
 }
 
 .btn_styling{
-    background-color: #1fb75f;
+    background-color: #2cce6a;
+    color: rgb(0, 0, 0);
+    text-decoration: none;
     padding: 10px 10px;
     border-radius: 8px;
+    transition: 0.3s;
+}
+.btn_styling:active{
+color: rgb(0, 0, 0);    
+}
+
+.btn_styling:hover{
+    background-color:#20904b ;
+}
+
+.btn_styling:focus{
+    color: rgb(0, 0, 0);
+}
+
+.btn_styling:visited {
+    color: rgb(0, 0, 0);
 }
 
 .tinos-regular {
@@ -59,6 +78,7 @@ header{
     top: 0px;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.395);
     z-index: 9;
+    font-family: Vast Shadow;
 }
 
 .header_container{
