--- a/project4_styles.css
+++ b/project4_styles.css
@@ -1,8 +1,19 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body{
     background-color: rgb(232, 231, 231);
 }
 
+.main_cntr{
+    width: 70%;
+}
+
 .carousel-inner {
+    width: 100%;
     height: 600px;
 }
 
@@ -10,10 +21,6 @@ body{
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
-
-.pictures{
-    width: 60%;
 }
 
 form{
@@ -25,40 +32,46 @@ form img{
     height: 80px;
 }
 
-.carousel-control-next-icon,
-.carousel-control-prev-icon {
-    width: 5vw;
-    height: 5vw;
-}
-
-@media (max-width:850px) {
-    .main_ctr{
-    height: 500px;   
+@media (max-width:900px) {
+    .main_cntr{
+        margin-top: 50px;
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+        height: 700px;
     }
 
     .carousel-inner {
-    height: 500px;
-    }
-    
-    .carousel-item img {
         width: 100%;
-        height: 100%;
-        object-fit: cover;
+        height: 300px;
     }
 
-    form {
+    form{
+        width: 100%;
         height: 500px;
-        width: 40%;
-    }
-
-    form img {
-        height: 80px;
+        font-size: 12px;
     }
 
     .border{
-        height: 400px;
+        width: auto;
+        height: 90%;
     }
 
+    form h2{
+        font-size: 18px;
+        margin-bottom: 20px;
+    }
 
+    form h3{
+        font-size: 14px;
+    }
+
+    form img {
+        display: none;
+    }
+
+    input{
+     height: 35px;   
+    }
 
     }
