--- a/style.css
+++ b/style.css
@@ -89,27 +89,6 @@ header{
     margin: auto;
     
 }
-
-.nav ul{
-    display: flex;
-    padding: 10px;
-    list-style-type: none;
-    color: rgb(0, 0, 0);
-}
-
-.nav a{
-    margin-left: 20px;
-    text-decoration: none;
-    font-family: Verdana;
-    text-decoration: none;
-    color: inherit;
-}
-
-.nav img{
-    height: 50px;
-    width: 50px;
-    display: none;
-}
 /*#endregion*/
 
 
@@ -134,21 +113,26 @@ header{
     gap: 20px;
     align-items: center;
     justify-content: center;
-    margin: 20px 0px;
 }
 
 .hero_text {
     display: flex;
     flex-direction: column;
-    width: 50%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     height: auto;
     color: rgb(255, 255, 255);
-    text-align: center;
-    gap: 15px;
+    gap: 5px;
 }
 
 .hero_header {
     font-size: 40px;
+    width: 70%;
+}
+
+.header_text{
+    width: 60%;
 }
 
 .hero_img > img {
@@ -194,8 +178,8 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 80px;
-    padding: 90px;
+    gap: 50px;
+    padding: 40px;
     border: 2px solid black;
     border-width: 2px 0px;
 }
@@ -210,10 +194,6 @@ header{
     width: 30%;
 }
 
-#resume{
-    width: 35%;
-}
-
 .aboutMe_img{
     margin: 5px;
     max-width: 80%;
@@ -226,8 +206,8 @@ header{
 /*#region -- Project Card Section -- */
 
 .project_section {
-    scroll-margin-top: 40px;
     display: flex;
+    height: auto;
     flex-direction: column;
     align-items: center;
     background-color: whitesmoke;
@@ -238,7 +218,7 @@ header{
     text-align: center;
     font-weight: 900;
     font-size: 32px;
-    padding: 20px 0px;
+    padding: 10px 0px;
 }
 
 .project_card_area{
@@ -260,9 +240,31 @@ header{
     border-radius: 10px;
 } 
 
+.project_card_text {
+    background: linear-gradient(to right, black, rgba(56, 56, 56, 0.923));
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-top: 2px solid white;
+    height: 50%;
+    width: 100%;
+    color: rgb(207, 219, 232);
+    text-align: center;
+    font-size: 14px;
+    padding: 20px 20px;
+    border-radius: 0px 0px 10px 10px;
+    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.573);
+}
+
+.project_card_text button{
+    padding: 5px 20px;
+}
+
 .project_card_img{
     width: 100%;
     height: 50%;
+    overflow:visible;
 }
 
 .project_card_img > img {
@@ -286,24 +288,6 @@ header{
 .cardimg4 img{
    object-fit: cover;
    object-position: center top;
-}
- 
-.project_card_text {
-    background: linear-gradient(to right, black, rgba(56, 56, 56, 0.923));
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 15px;
-    border-top: 2px solid white;
-    height: auto;
-    width: 100%;
-    color: rgb(207, 219, 232);
-    text-align: center;
-    font-size: 16px;
-    padding: 20px 20px;
-    border-radius: 0px 0px 10px 10px;
-    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.573);
 }
 /*#endregion*/
 
@@ -375,43 +359,45 @@ header{
 
 /*#region -- Footer Section -- */
 .footer_container {
-    display: flex;
     background-color: whitesmoke;
-    height: 100px;
+    height: 80px;
     color: #000000;
-    align-items: center;
-    justify-content: center;
     font-family: "Vast Shadow";
-    
 }
 
 .footer_box {
     display: flex;
-    flex-wrap: wrap;
-    width: 80%;
-    list-style-type: none;
+    justify-content: space-around;
     align-items: center;
-    justify-content: space-evenly;
+    margin: auto;
+    width: 90%;
+
 }
 
 .footer_items{
     display: flex;
     align-items: center;
-    justify-content: center;
+    height: 60px;
+    margin: 10px 10px;
     gap: 10px;
+}
+
+.footer_items p{
+    margin: auto 0px;
 }
 
 .footer_box img{
     height: 50px;
     width: 50px;
+    margin: auto 0px;
 }
 
 .rights{
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    padding: 0px 15px;
-    height: 30px;
+    padding: 5px 15px;
+    height: 40px;
+    width: 100%;
     background-color: #000000;
     color: white;
     border-bottom: 2px solid whitesmoke;
