--- a/project2_styles.css
+++ b/project2_styles.css
@@ -32,6 +32,38 @@ a{
     z-index: 2;
 }
 
+.graybg_project{
+    padding: 50px;
+    height: 600px;
+    background-color: lightgray;
+}
+
+.codingbg_project{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    background-image: url(images/coding_background.jpg);
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    height: 500px;
+    width: 80%;
+    margin: auto;
+    z-index: 1;
+    border-radius: 20px;
+    box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.501);
+}
+
+.contrast_layer_project{
+    position: absolute;
+    height: 500px;
+    width: 100%;
+    background-color: #0000006e;
+    z-index: 2;
+    border-radius: 20px;
+}
+
 .project_contrast_layer {
     position: absolute;
     height: 600px;
@@ -94,12 +126,14 @@ a{
     flex-direction: column;
     height: 100px;
     flex-wrap: wrap;
-    font-family: Verdana;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 15px;
     align-items: center;
     justify-content: center;
-    margin: 20px 20px 10px 20px;
-    gap: 20px;
+}
+
+.social_section h3{
+    font-size: 18px;
 }
 
 .social_icons {
@@ -121,13 +155,7 @@ a{
     transform: scale(1.3);
 }
 
-@media (min-width:701px) and (max-width:1200px) {
-    .content {
-        width: 70%;
-    }
-}
-
-@media (max-width:1000px) {
+@media (max-width:800px) {
     .coding_bg{
         width: 95%;
     }
@@ -136,11 +164,14 @@ a{
         height: 90%;
     }
     .content h2{
-        font-size: 24px;
+        font-size: 20px;
+        font-weight: 600;
+        width: 100%;
     }
 
     .content p{
-        font-size: 16px;
+        font-size: 14px;
+        width: 100%;
     }
 
     .lp_form {
@@ -155,13 +186,19 @@ a{
     .form_submit{
         width: 30%;
     }
-    .social_icons {
-        margin: 0px;
+
+    .form_project input{
+        padding: 5px;
+    }
+
+    .social_section h3{
+        font-size: 14px;
+        width: 100%;
     }
 
     .social_icons img{
-        height: 40px;
-        width: 40px;
+        height: 30px;
+        width: 30px;
     }
 
 }
