--- a/project5_styles.css
+++ b/project5_styles.css
@@ -5,10 +5,12 @@
 }
 
 .whatsapp_icon{
+    top: 40px;
+    left: 60px;
+    background: white;
     height: 80px;
     width: 80px;
     border-radius: 50%;
-    margin: 50px 100px;
 }
 
 .header_box{
@@ -21,8 +23,8 @@
     font-weight: 900;
 }
 
-.cards_box{
-    height: auto;
+.card h3{
+    color: #0EE1E1;
 }
 
 .icons{
@@ -34,6 +36,11 @@
 
 .main_box{
     height: 750px;
+    font-weight: bold;
+}
+
+.main_box h2{
+    font-size: 35px;
 }
 
 .form{
@@ -44,34 +51,50 @@
     background-color: #0EE1E1;
     border: none;
     padding: 10px;
-    font-weight: 900;
+    height: 50px;
 }
 
 .input{
     border: none;
-    border-bottom: 2px solid #0EE1E1;
-    background: rgba(211, 211, 211, 0.443);
-    height: 30px;
+    border-bottom: 3px solid #0EE1E1;
+    background: rgba(255, 255, 255, 0.443);
 }
 
 .map{
     background-color: #0EE1E1;
 }
 
-.social_box{
-   
+.social_box {
+    height: 150px;
 }
 
+.icons {
+    box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.267);
+}
 
 .bottom_border{
     background: #0EE1E1;
     height: 10px;
 }
 
+
 @media (max-width:750px){
+    .whatsapp_icon{
+        background: none;
+        display: none;
+    }
+
+    .whatsapp_icon img {
+        display: none;
+    }
+
     .box_icon{
         height: 80px;
         width: 80px;
+    }
+
+    .card{
+        height: 90%;
     }
 
     .map{
@@ -88,13 +111,8 @@
         height: auto;
     }
 
-    .social_box{
-
+    .social_box {
+        height: 200px;
     }
-
-    .icons{
-        min-height: 60px;
-    }
-
 
 }
