--- a/project1_style.css
+++ b/project1_style.css
@@ -128,7 +128,7 @@ body{
 }
 
 .login h2{
-    width: 80%;
+    max-width: 90%;
     text-align: center;
 }
 
@@ -172,7 +172,7 @@ body{
         width: 100%;
     }
 
-    .side_image img, .project_sideimg img{
+    .side_image img, .project_sideimg{
         border-radius: 15px 15px 0px 0px;
         object-fit: cover;
         object-position: bottom;
