--- a/project1_style.css
+++ b/project1_style.css
@@ -68,30 +68,32 @@
 /*#endregion*/
 
 /*#region Project Styles */
-body{
-    background-color: lightgray;
-}
+
 
 .login_container{
-    width: 80vw;
-    height: 80dvh;
+    width: 100vw;
+    height: 100dvh;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 50px auto;
-    box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.4);
-    border-radius: 15px;
 }
 
 .side_image {
-    height: 80vh;
+    position: relative;
+    height: 100vh;
     width: 60%;  
+    padding: 5px;
+    
 }
 
 .side_image img {
+    position: absolute;
     width: 100%;
-    height: 100%;
-    border-radius: 15px 0px 0px 15px;
+    height: 95%;
+    top: 20px;
+    left: 20px;
+    border-radius: 15px;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.404);
 }
 
 .login{
@@ -104,7 +106,6 @@ body{
     justify-content: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     gap: 10px;
-    border-radius: 0px 15px 15px 0px;
 }
 
 .form{
