--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ header{
 
 #hero_section{
     display: flex; 
-    height: 400px;
+    min-height: 400px;
     background-image: url(images/black_beach.jpg);
     background-repeat: no-repeat;
     flex-wrap: wrap;
@@ -127,7 +127,6 @@ header{
 
 .header_text{
     width: 60%;
-    padding: 10px;
 }
 
 .hero_img > img {
@@ -305,6 +304,23 @@ header{
     max-width: 900px;
     max-height: 500px;
     border-radius: 15px;
+}
+
+.screenshot_mobile{
+    border-radius: 15px;
+    box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.416);
+    width: 90%;
+    height: auto;
+}
+
+#project_section {
+    background-color: lightgray;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: auto;
+    padding: 40px;
 }
 
 /*#region -- Contact Section -- */
