--- a/project4_styles.css
+++ b/project4_styles.css
@@ -4,57 +4,46 @@
     box-sizing: border-box;
 }
 
-body{
-    background-color: rgb(232, 231, 231);
-}
-
-.main_cntr{
-    width: 70%;
-}
-
-.carousel-inner {
-    width: 100%;
-    height: 600px;
+.border{
+    margin-top: 25%;
+    width: 95%;
+    height: auto;
 }
 
 .carousel-item img {
-    width: 100%;
-    height: 100%;
+    max-height: 100vh;
+    max-width: 100vw;
     object-fit: cover;
-}
-
-form{
-    height: 600px;
-    width: 40%;
 }
 
 form img{
     height: 80px;
 }
 
-@media (max-width:900px) {
-    .main_cntr{
-        margin-top: 50px;
-        width: 90%;
-        display: flex;
-        flex-direction: column;
-        height: 700px;
-    }
+#exampleInputEmail1::placeholder {
+    color: transparent;
+}
 
-    .carousel-inner {
-        width: 100%;
-        height: 300px;
+#exampleInputPassword1::placeholder {
+    color: transparent;
+}
+@media (max-width:800px) {
+    .carousel-inner, .carousel-item img {
+    max-height: 50vh;
+    max-width: 100vw;
+    object-fit: cover;
     }
 
     form{
-        width: 100%;
-        height: 500px;
-        font-size: 12px;
+        height: 50vh;
     }
 
     .border{
-        width: auto;
-        height: 90%;
+    margin-top: 5%;
+    margin: 5% auto;
+    width: 90%;
+    height: 90%;
+    gap: 3px;
     }
 
     form h2{
@@ -71,7 +60,15 @@ form img{
     }
 
     input{
-     height: 35px;   
+        height: 35px;   
+    }
+
+    #exampleInputEmail1::placeholder {
+        color: #888;
+    }
+
+    #exampleInputPassword1::placeholder {
+        color: #888;
     }
 
     }
