--- a/project6_styles.css
+++ b/project6_styles.css
@@ -6,21 +6,19 @@
 
 body{
     background-color: #E5EEFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .grid-container{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(6, 1fr);
-    height: 1726px;
-    width: 1224px;
-    margin: 50px auto;
+    max-height: 1726px;
+    max-width: 1224px;
+    margin: 20px;
     gap: 20px;
-}
-
-.grid-item{
-    height: 271px;
-    width: 296;
 }
 
 #banner {
@@ -53,6 +51,7 @@ body{
     background-color: #8E097C;
     display: flex;
     flex-direction: column;
+    align-items: center;
     padding: 56.73px;
     color: white;
     text-align: center;
@@ -167,4 +166,65 @@ body{
     background-image: url(images/project6_images/Rectangle\ 506-4.png);
     background-size: cover;
     background-position: center;
+}
+
+@media (max-width:780px){
+    .grid-container{
+        margin: 20px;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(12, 1fr);
+        min-height: fit-content;
+    }
+
+    #banner{
+        margin: -20px -20px 0px -20px;
+        grid-area: 1/1/3/3;
+
+        h2{
+            font-size: 36px;
+        }
+
+    }
+
+    #form{
+        grid-area: 7/1/10/3;
+        height: max-content;
+        padding: 60px 20px;
+
+    h3 {
+        font-size: 25px;
+        width: 90%;
+    }
+    
+    p {
+        font-size: 15px;
+        width: 90%;
+    }
+
+    .form_fields{
+        width: 95%;
+    }
+
+    label{
+        font-size: 7px;
+    }
+
+    input, button{
+        height: 33px;
+    }
+
+    textarea{
+        height: 95px;
+    }
+
+
+    }
+
+    
+    
+
+
+
+
+
 }
