--- a/style.css
+++ b/style.css
@@ -56,6 +56,10 @@ color: rgb(0, 0, 0);
 
 
 /*#region -- Header Section -- */
+body{
+    background-color: #595959;
+}
+
 .logo{
     color: #000000;
     font-size: 1.5rem;
@@ -66,9 +70,11 @@ color: rgb(0, 0, 0);
     max-width: 50px;
 }
 
-.nav_blur{
-    backdrop-filter:blur(15px);
+.navbar{
+    backdrop-filter:blur(10px);
+    color: white;
 }
+
 /*#endregion*/
 
 
@@ -119,6 +125,7 @@ color: rgb(0, 0, 0);
     height: 100px;
     width: 100px;
     border-radius: 50%;
+    box-shadow: 0px 5px 10px rgb(0, 0, 0);
 }
 
 .hero_box p{
@@ -138,8 +145,9 @@ color: rgb(0, 0, 0);
 
 /*#region -- Icon Section -- */
 #icon_section{
-    background-color: whitesmoke;
+    background-color:#161616;
     padding: 15px 0px;
+    border-top: 2px solid rgb(255, 255, 255) ;
 }
 
 .icon_container {
@@ -164,15 +172,14 @@ color: rgb(0, 0, 0);
 
 
 /*#region -- About Me Section -- */
-
 .aboutMe_box{
-    background-color: #ffffffd2;
+    background: linear-gradient(to right, rgb(17, 17, 17), rgb(41, 41, 41));
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 50px;
     padding: 40px;
-    border: 2px solid black;
+    border: 2px solid rgb(255, 255, 255);
     border-width: 2px 0px;
 }
 
@@ -184,13 +191,14 @@ color: rgb(0, 0, 0);
     text-align: center;
     align-items: center;
     width: 30%;
+    color: white;
 }
 
 .aboutMe_img{
     margin: 5px;
     max-width: 80%;
     border-radius: 20px;
-    border: 5px solid white;
+    border: 5px solid #888;
 }
 /*#endregion*/
 
@@ -202,7 +210,7 @@ color: rgb(0, 0, 0);
     height: auto;
     flex-direction: column;
     align-items: center;
-    background-color: whitesmoke;
+    background-color: #161616;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
@@ -211,6 +219,7 @@ color: rgb(0, 0, 0);
     font-weight: 900;
     font-size: 32px;
     padding: 10px 0px;
+    color: white;
 }
 
 .project_card_area{
@@ -230,6 +239,7 @@ color: rgb(0, 0, 0);
     align-items: center;
     justify-content: center;
     border-radius: 10px;
+    border: 2px groove white;
 } 
 
 .project_card_text {
@@ -270,16 +280,9 @@ color: rgb(0, 0, 0);
     color: rgb(255, 255, 255);
 }
 
-.cardimg3{
-    background-image: url(images/tiger.jpg);
-    background-size: cover;
-    background-position: center center;
-    border-radius: 10px 10px 0px 0px;
-}
-
-.cardimg4 img{
+.cardimg{
    object-fit: cover;
-   object-position: center top;
+   object-position: center center;
 }
 
 /*#endregion*/
@@ -488,7 +491,7 @@ color: rgb(0, 0, 0);
     }
 
     .project_card_area{
-        width: 70%;
+        width: 80%;
     }
 
     .project_card_text {
