--- a/project2-sass/project2-styles.css
+++ b/project2-sass/project2-styles.css
@@ -87,8 +87,10 @@
     position: relative;
     right: auto;
     margin: auto;
+    height: -moz-fit-content;
+    height: fit-content;
     width: 80%;
-    padding: 50px;
+    padding: 50px 30px;
   }
   .form-container .header-text {
     text-align: center;
@@ -111,4 +113,4 @@
     margin-top: 0px;
     width: 30%;
   }
-}/*# sourceMappingURL=project2_styles.css.map */
+}/*# sourceMappingURL=project2-styles.css.map */
