--- a/project2-sass/project2-styles.scss
+++ b/project2-sass/project2-styles.scss
@@ -98,6 +98,7 @@ $boxgray:#1A1A1AD4;
         right: auto;
         margin: auto;
         height: fit-content;
+        top: 5%;
         width: 80%;
 
         padding: 50px 30px;
