--- a/projects/Project 6/styles/style.css
+++ b/projects/Project 6/styles/style.css
@@ -60,6 +60,7 @@ body{
 .form_fields{
     display: flex;
     flex-direction: column;
+    width: 95%;
 }
 
 #form h3{
@@ -87,83 +88,7 @@ body{
     font-weight: bold;
 }
 
-#img1{
-    background-image: url(images/project6_images/Rectangle\ 515.png);
-    background-size: cover;
-    background-position: center;
-}
-
-#img2 {
-    background-image: url(images/project6_images/Rectangle\ 514.png);
-    background-size: cover;
-    background-position: center;
-}
-
-#img3 {
-    background-image: url(images/project6_images/Rectangle\ 516.png);
-    background-size: cover;
-    background-position: center;
-}
-
-#img4 {
-    background-image: url(images/project6_images/Rectangle\ 506-5.png);
-    background-size: cover;
-    background-position: center;
-}
-
-#img5 {
-    background-image: url(images/project6_images/Rectangle\ 506-2.png);
-    background-size: cover;
-    background-position: center;
-}
-
-#img6 {
-    background-image: url(images/project6_images/Rectangle\ 506-3.png);
-    background-size: cover;
-    background-position: center;
-}
-
-#img7 {
-    background-image: url(images/project6_images/Rectangle\ 506-4.png);
-    background-size: cover;
-    background-position: center;
-}
-
-#img8 {
-    background-image: url(images/project6_images/Rectangle\ 506-1.png);
-    background-size: cover;
-    background-position: center;
-}
-
-#img9 {
-    background-image: url(images/project6_images/Rectangle\ 506-8.png);
-    background-size: cover;
-    background-position: center;
-}
-
-#img10 {
-    background-image: url(images/project6_images/Rectangle\ 506-7.png);
-    background-size: cover;
-    background-position: center;
-}
-
-#img11 {
-    background-image: url(images/project6_images/Rectangle\ 506-9.png);
-    background-size: cover;
-    background-position: center;
-}
-#img12 {
-    background-image: url(images/project6_images/Rectangle\ 506-6.png);
-    background-size: cover;
-    background-position: center;
-}
-#img13 {
-    background-image: url(images/project6_images/Rectangle\ 513.png);
-    background-size: cover;
-    background-position: center;
-}
-#img14 {
-    background-image: url(images/project6_images/Rectangle\ 506-4.png);
+.grid-item{
     background-size: cover;
     background-position: center;
 }
