--- a/projects/Travel_Project/styles/main.css
+++ b/projects/Travel_Project/styles/main.css
@@ -91,8 +91,8 @@ body{
 .grid-item img{
     object-size: cover;
     object-position: center;
-    height: fit-content;
-    width: fit-content;
+    height: 100%;
+    width: 100%;
 }
 
 @media (max-width:780px){
