consulting project mobile

--- a/projects/Consulting_Project/styles/main.scss
+++ b/projects/Consulting_Project/styles/main.scss
@@ -2,8 +2,12 @@ $primary:#FDBD03;
 
 .top-line{
     height: 20px;
-    width: 430px;
+    
     background-color: $primary;
+
+        @media (max-width:780px) {
+           
+        }
 }
 
 .whatsapp{
