consulting project mibile fixes

--- a/projects/Consulting_Project/styles/main.css
+++ b/projects/Consulting_Project/styles/main.css
@@ -2,24 +2,67 @@
   height: 20px;
   background-color: #FDBD03;
 }
+@media (max-width: 780px) {
+  .top-line {
+    width: 80%;
+    height: 10px;
+  }
+}
+
 .whatsapp {
   position: absolute;
   top: 80px;
   left: 80px;
 }
 
+.phone_box {
+  display: flex;
+  justify-content: center;
+}
+
 .phone {
   height: 600px;
   width: 400px;
+}
+@media (max-width: 780px) {
+  .phone {
+    margin-bottom: 50px;
+    height: 100px;
+    width: 70px;
+  }
 }
 
 .text_container h1 {
   color: #FDBD03;
   font-weight: bolder;
 }
+@media (max-width: 780px) {
+  .text_container h1 {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+}
 .text_container p {
   margin-left: auto;
   width: 60%;
+}
+@media (max-width: 780px) {
+  .text_container p {
+    margin: auto;
+    width: 80%;
+    text-align: center;
+    margin-bottom: 40px;
+  }
+}
+
+.form {
+  width: 75%;
+}
+@media (max-width: 780px) {
+  .form {
+    margin-inline: auto;
+    width: 90%;
+  }
 }
 
 .field {
@@ -38,6 +81,13 @@
   background-color: #FDBD03;
   border: none;
   font-weight: bolder;
+  width: 25%;
+}
+@media (max-width: 780px) {
+  .submit {
+    margin-inline: auto;
+    width: 95%;
+  }
 }
 
 .social {
@@ -50,8 +100,28 @@
   border-radius: 50%;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.314);
 }
+@media (max-width: 780px) {
+  .social {
+    height: 50px;
+    width: 50px;
+    margin-top: 80px;
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 780px) {
+  .social img {
+    height: 30px;
+    width: 30px;
+  }
+}
 
 .bottom-line {
   height: 20px;
   background-color: #FDBD03;
+}
+@media (max-width: 780px) {
+  .bottom-line {
+    height: 10px;
+    width: 100%;
+  }
 }/*# sourceMappingURL=main.css.map */
