project 8 and fixes

--- a/styles/main.css
+++ b/styles/main.css
@@ -65,17 +65,20 @@ body{
 }
 
 .logo{
-    object-fit:contain;
+    object-fit:fill;
     object-position: center;
     height: 30px;
     width: 80px;
+        @media (max-width:780px) {
+            height: 30px;
+            width: 60px;
+        }
 }
 
 .navbar{
     backdrop-filter:blur(10px);
     font-family: "Josefin Sans";
     font-weight: bold;
-
         a{
             text-transform: uppercase;
         }
@@ -188,6 +191,13 @@ body{
         }
 }
 
+.project_icons{
+    display: flex;
+        i{
+            filter: invert();
+        }
+}
+
 .icon_container {
     display: flex;
     flex-wrap: wrap;
@@ -199,6 +209,24 @@ body{
     width: 100%;
     margin-top: 40px;
 }
+
+
+.project_icon_container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    align-content: space-evenly;
+    justify-content: center;
+    gap: 20px;
+    height: auto;
+    width: 100%;
+    padding-block: 20px;
+    background: linear-gradient(to right, rgb(17, 17, 17), rgb(41, 41, 41));
+    border-top: 1px solid #e6e6e6;
+    border-bottom: 1px solid #e6e6e6;
+}
+
+
 
 .aboutMe_img{
     margin: 5px;
@@ -217,7 +245,6 @@ body{
     flex-direction: column;
     align-items: center;
     background: linear-gradient(to right, rgb(17, 17, 17), rgb(41, 41, 41));
-    
 }
 
 .project_header {
@@ -232,7 +259,7 @@ body{
 .project_card_area{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
     gap: 30px;
     width: 60%;
     height: auto;
@@ -310,14 +337,14 @@ body{
     height: auto;
 }
 
-#project_section {
-    background-color: lightgray;
+.project_preview {
+    background: linear-gradient(to right, rgb(17, 17, 17), rgb(41, 41, 41));
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
     height: auto;
-    padding: 40px;
+    padding: 50px;
 }
 
 /*#region -- Contact Section -- */
@@ -388,7 +415,7 @@ body{
 
 /*#region -- Footer Section -- */
 .footer_container {
-    background-color:#5cb3d5;
+    background-color:#cfcfcf;
     height: 80px;
     color: #000000;
 }
@@ -431,7 +458,6 @@ body{
     width: 100%;
     background-color: #000000;
     color: white;
-    border-bottom: 2px solid whitesmoke;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 /*#endregion*/
